Fix Discovery Package

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,12 @@
         "psr-4": {
             "hesham\\hpackage\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Barryvdh\\Debugbar\\ServiceProvider"
+            ]
+        }
     }
 }
